terraform/modules/monitoring/loadbalancer.tf
/*
resource "aws_security_group" "loadbalancer" {
  name="Loadbalancer_Bravo"
  description="Grafana and Kibana"
  vpc_id=var.vpc-id
  ingress {
    protocol  = "-1"
    self      = true
    from_port = 0
    to_port   = 0
  }

  ingress {
    description="Grafana"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description="Kibana"
    from_port   = 5601
    to_port     = 5601
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    description="Allow all"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    self        = true
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags={
    Name="lb_scgroup_bravo"
  }
}




resource "aws_lb_target_group" "monitoring" {
  name     = "monitoring-tg"
  port     = 3000
  protocol = "HTTP"
  target_type = aws_instance.ec2_instance_monitoring.ip
  vpc_id   = var.vpc-id

  tags={
        Name="monitoring-tg-teamB"
    }
}

resource "aws_lb_target_group" "logging" {
  name     = "loging-tg"
  port     = 5601
  protocol = "HTTP"
  target_type = aws_instance.ec2_instance_logging.ip
  vpc_id   = var.vpc-id

  tags={
        Name="loging-tg-teamB"
    }
}



resource "aws_lb_listener_rule" "monitoring_rule" {
  listener_arn = var.aws_alb_listener-arn
  priority     = 100

  action {
    type = "forward"
    forward {
      target_group {
        arn    = aws_lb_target_group.monitoring.arn
        weight = 100
      }

      stickiness {
        enabled  = true
        duration = 600
      }
    }
  }

 condition {
    path_pattern {
      values = ["/grafana"]
    }
  }
}

resource "aws_lb_listener_rule" "logging_rule" {
  listener_arn = var.aws_alb_listener-arn
  priority     = 100

  action {
    type = "forward"
    forward {
      target_group {
        arn    = aws_lb_target_group.logging.arn
        weight = 100
      }

      stickiness {
        enabled  = true
        duration = 600
      }
    }
  }

 condition {
    path_pattern {
      values = ["/kibana "]
    }
  }
}
*/
